--- a/ProjectManager/pom.xml
+++ b/ProjectManager/pom.xml
@@ -1,13 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>G1</groupId>
-  <artifactId>M1</artifactId>
+  <groupId>HDCS</groupId>
+  <artifactId>ProjectManager</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>M1 Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
   <properties>  
         <!-- spring版本号 -->  
         <spring.version>4.0.2.RELEASE</spring.version>  
